Update readme, test via jest-circus

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "execa": "^1.0.0",
     "jest": "^24.7.1",
+    "jest-circus": "^24.7.1",
     "jest-cli": "^24.7.1",
     "meow": "^5.0.0",
     "prettier": "^1.16.4",
