--- a/e2e/failing/package.json
+++ b/e2e/failing/package.json
@@ -1,6 +1,7 @@
 {
   "jest": {
     "testEnvironment": "node",
-    "setupFilesAfterEnv": ["../../"]
+    "setupFilesAfterEnv": ["../../"],
+    "testRunner": "jest-circus/runner"
   }
 }
